--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body class="overflow-x-hidden">
 
     <header>
+<!--         navbarcode -->
         <div class="nav flex justify-around items-center w-screen h-[5rem]  border-b-2 border-black">
 
             <div class="logo">
@@ -35,11 +36,13 @@
 
     <main>
 
+<!--         backimagecode -->
         <div class="backimg">
             <img src="bacimg.png" alt=""
                 class="flex m-auto w-[80vw] h-[40rem] border-2 border-black mt-10 rounded-lg mb-10">
         </div>
 
+<!--         headingcode -->
         <div class="boxes flex">
 
             <div class="green bg-[#5CFFA0] w-[30vw] h-[30rem]">
@@ -51,6 +54,7 @@
 
         </div>
 
+<!--         photo and information code -->
         <div class="tech flex justify-around mt-10">
 
             <div class="box1 w-[40vw] h-[35rem]  p-10 border-2 border-black rounded-2xl grid">
@@ -67,6 +71,7 @@
           
         </div>
 
+<!--         another photo and information code -->
         <div class="tech flex justify-around mt-10">
             
             <div class="box1 w-[40vw] h-[35rem] bg-[#5CFFA0] flex justify-center items-center p-10 rounded-2xl">
